EXTRA_DIST = \
	$(docs_DATA)

docsdir = \
	$(datadir)/doc/transcode@TC_VERSUFFIX@/html

docs_DATA =  \
	dv.html \
	dvd.html \
	export_divx.html \
	export_divx4.php \
	export_divx5.php \
	export_fame.php \
	export_ogg.php \
	export_opendivx.php \
	export_xvid.php \
	import_avi.html \
	import_dv.html \
	import_dvd.html \
	import_mp3.html \
	import_mpeg2.html \
	import_mpeg3.html \
	import_null.html \
	import_nuv.html \
	import_ogg.php \
	import_raw.html \
	import_vob.html \
	import_yuv4mpeg.html \
	index.html \
	intro.html \
	mes0-00000.png \
	mes4-00000.png \
	mes5-00000.png \
	mes6-00000.png \
	mes7-00000.png \
	misc.html \
	modules.html \
	mpeg.html \
	new.png \
	other.html \
	post.html \
	pre.html \
	smart.html \
	sorry.html \
	sub0-00000.png \
	sub1-00000.png \
	sub2-00000.png \
	sub3-00000.png \
	subtitles.html \
	table.php \
	tc.png
