man_MANS = \
	transcode.1 \
	transcode_export.1 \
	transcode_filter.1 \
	transcode_import.1 \
	tccat.1 \
	tcprobe.1 \
	tcdemux.1 \
	tcscan.1 \
	tcexport.1 \
	tcextract.1 \
	tcdecode.1 \
	tccfgshow.1 \
	tcmodinfo.1 \
	tcmodchain.1 \
	tcxmlcheck.1 \
	avisplit.1 \
	avimerge.1 \
	avifix.1 \
	aviindex.1 \
	avisync.1

EXTRA_DIST = \
	$(man_MANS) \
	transcode.1.xml
	transcode_import.1.xml
