# # Process this file with automake to produce Makefile.in.

EXTRA_DIST = \
	$(docs_DATA)

SUBDIRS = \
	html

docsdir = \
	$(datadir)/doc/transcode@TC_VERSUFFIX@/tech


docs_DATA = \
	LIBRARIES \
	OPTIMIZERS \
	architecture.txt \
	avi_comments.txt \
	clone.txt \
	export-API.txt \
	filter-API.txt \
	filter_template.c \
	ibp_support.txt \
	import-API.txt \
	module-system-API.txt

